--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <name>API Capabilities Module</name>
     <groupId>dk.nykredit.api</groupId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <artifactId>capabilities</artifactId>
     <packaging>jar</packaging>
 
@@ -32,7 +32,7 @@
         <connection>scm:git:https://github.com/Nykredit/api-capabilities.git</connection>
         <developerConnection>scm:git:https://github.com/Nykredit/api-capabilities.git</developerConnection>
         <url>https://github.com/Nykredit/api-capabilities/tree/master</url>
-      <tag>v1.0.0</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
