--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     
     <name>API Capabilities Module</name>
-    <groupId>dk.nykredit.api</groupId>
+    <groupId>dk.openapitools.api</groupId>
     <version>1.0.1-SNAPSHOT</version>
     <artifactId>capabilities</artifactId>
     <packaging>jar</packaging>
 
     <description>Java classes to parse query parameters into capability model.</description>
-    <url>https://github.com/Nykredit/api-capabilities</url>
+    <url>https://github.com/openapi-tools/api-capabilities</url>
 
     <licenses>
         <license>
@@ -22,16 +22,16 @@
     <developers>
         <developer>
           <name>Thor Anker Kvisgård Lange</name>
-          <email>tal@nykredit.dk</email>
-          <organization>Nykredit</organization>
-          <organizationUrl>http://www.nykredit.dk</organizationUrl>
+          <email>thor.lange@gmail.com</email>
+          <organization>Open API Tools</organization>
+          <organizationUrl>https://github.com/openapi-tools</organizationUrl>
         </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:https://github.com/Nykredit/api-capabilities.git</connection>
-        <developerConnection>scm:git:https://github.com/Nykredit/api-capabilities.git</developerConnection>
-        <url>https://github.com/Nykredit/api-capabilities/tree/master</url>
+        <connection>scm:git:https://github.com/openapi-tools/api-capabilities.git</connection>
+        <developerConnection>scm:git:https://github.com/openapi-tools/api-capabilities.git</developerConnection>
+        <url>https://github.com/openapi-tools/api-capabilities/tree/master</url>
       <tag>HEAD</tag>
     </scm>
 
