--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install: true
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
+after_script:
+  - "[[ $TRAVIS_PULL_REQUEST == false ]] && mvn -Pjacoco package sonar:sonar -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=openapi-tools -Dsonar.login=${SONARQUBE_TOKEN}"
+
 cache:
   directories:
     - $HOME/.m2
