--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <name>API Capabilities Module</name>
     <groupId>io.openapitools.api</groupId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <artifactId>capabilities</artifactId>
     <packaging>jar</packaging>
 
@@ -32,7 +32,7 @@
         <connection>scm:git:https://github.com/openapi-tools/api-capabilities.git</connection>
         <developerConnection>scm:git:https://github.com/openapi-tools/api-capabilities.git</developerConnection>
         <url>https://github.com/openapi-tools/api-capabilities/tree/master</url>
-      <tag>HEAD</tag>
+      <tag>v1.0.2</tag>
     </scm>
 
     <distributionManagement>
@@ -50,7 +50,7 @@
         <checkstyle.plugin.version>2.17</checkstyle.plugin.version>
         <checkstyle.version>7.8.2</checkstyle.version>
         <findbugs.version>3.0.4</findbugs.version>
-        <jacoco.version>0.7.9</jacoco.version>
+        <jacoco.version>0.8.4</jacoco.version>
         <junit.version>4.12</junit.version>
         <pmd.plugin.version>3.8</pmd.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
